fixed the art modal alignment and made dropdown more visible

--- a/src/components/ArtModal/styles.css
+++ b/src/components/ArtModal/styles.css
@@ -42,16 +42,18 @@
 
 #artDetails {
     height: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
+    margin: 2%;
     text-align: center;
-    margin: 2%
 }
 
 #artDetails p {
     color: white;
     margin: 5px;
     font-weight: 600;
+
 }
 
 .modal-close-button {
@@ -67,29 +69,35 @@
 
 .modal img {
     max-width: inherit ;
-    max-height: 80%;
-    /* position: fixed; */
+    max-height: 70%;
 }
 
 .subDetails {
   display: flex;
+  justify-content: center;
 }
 
 #description {
     margin-top: 10%;
+    /* text-align: left; */
 }
 
 label {
   color: black;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 600px) {
     .modal {
-        max-width: 98%;
+        max-width: 100vw;
+        height: 100vh;
+        /* justify-content: space-evenly;
+        align-content: space-evenly; */
     }
 
     .modal img {
         height: auto;
-        width: 100%;
+        max-width: 98vw;
     }
+
+    
 }
